[package]
name = "isla-testgen"
version = "0.1.0"
authors = ["Brian Campbell <Brian.Campbell@ed.ac.uk>"]
edition = "2018"
license = "BSD-2-Clause"
readme = "../README.md"

[[bin]]
name = "isla-testgen"
path = "src/testgen.rs"

[[bin]]
name = "decode-from-tags"
path = "src/decode_from_tags.rs"

[dependencies]
crossbeam = "0.7.3"
getopts = "0.2.21"
isla-lib = { path = "isla/isla-lib" }
isla-axiomatic = { path = "isla/isla-axiomatic" }
isla = { path = "isla" }
rand = "0.7.3"
regex = "1.3.1"
lazy_static = "1.4.0"
sha2 = "0.8.1"

[profile.release]
debug = 1
